Fixed some CSS layout issues. Using auto fit for grid instead of auto fill

--- a/pages/recipe_list/RecipeList.module.css
+++ b/pages/recipe_list/RecipeList.module.css
@@ -1,6 +1,6 @@
 .meals_container{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-gap: 2rem;
 }
 
@@ -15,8 +15,7 @@
 
     -webkit-box-shadow: 1px 2px 15px -3px #F9FF20; 
     box-shadow: 1px 2px 15px -3px #F9FF20;
-    background: #1C6EA4;
-   
+    background: #000508;
  
 }
 
