--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -13,9 +13,14 @@
     margin-top: 0px;
    
   }
+
+  .header:hover{
+      cursor: pointer;
+  }
   
   .footer {
     margin-top: 32px;
     text-align: center;
-    font-size: 0.75rem;
+    font-size: 1rem;
+    color: blanchedalmond;
   }
